# computer-use-1

./: .env.example  .gitignore  AGENTS.md  README.md  find_folders.py  fix_all.py  full_run.sh  get_brian_mail.py  get_brian_mail_clean.py  get_params.sql  get_params_out.txt  read_email.py  read_email3.py  rename_p_cols2.py  requirements.txt  test_append.py  test_append2.py  test_bq.py  test_query.py  test_query2.py  test_query3.py  test_query4.py  test_read_excel.py  wait_for_synthesis.py
runs/2026-01-16__ge-market-insights/ge-pipeline/: AGENTS.md  PARITY_ALIGNMENT_APPROACH.md  PIPELINE_README.md  README.md  SUMMARY_OF_RECENT_ITERATION.md  pyproject.toml  requirements.txt
runs/2026-01-16__ge-market-insights/ge-pipeline/brand/: Premier-FY25-PPT 16x9-Feb25.pptx
runs/2026-01-16__ge-market-insights/ge-pipeline/config/: ct_charity_terms.yaml  deck.yaml  golden.yaml
runs/2026-01-16__ge-market-insights/ge-pipeline/dataform/: DATAFORM_README.md  dataform.json  package-lock.json  package.json
runs/2026-01-16__ge-market-insights/ge-pipeline/docs/: ARCHITECTURE.md  CHARITY_CT_FINDINGS_SUMMARY.md  MCP_TOOLBOX_GUIDE.md  MIGRATION_GUIDE.md  PARITY_AUDIT_FINDINGS.md  PPTX_GENERATION_GUIDE.md  PRODUCT_REQUIREMENTS.md
runs/2026-01-16__ge-market-insights/ge-pipeline/scripts/: analyze_q4_seasonality.py  ct_charity_outputs.py  ct_charity_sanity_checks.py  deck_outline_metrics.py  generate_capital_visuals.py  generate_parity_visuals.py  run_full_pipeline.py
runs/2026-01-16__ge-market-insights/ge-pipeline/sql/: ct_charity_hierarchy_extract.sql  ct_charity_presence_check.sql  (+2 more)
(+8658 files in other folders)
